Fixed an issue with landingpage background white space

--- a/Website/RIPWebsite/src/app/landing-page/landing-page-container/landing-page-container.component.css
+++ b/Website/RIPWebsite/src/app/landing-page/landing-page-container/landing-page-container.component.css
@@ -2,6 +2,13 @@
     padding: 0;
     margin: 0;
     background-image: url("../../../assets/loginBackground.png");
+    /* Set a specific height */
+    height: 500px; 
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
     background-position: center;
     background-size: cover;
     height: 150vh;
